Issue IMCMS-425: Design changes log in window - Added style align text on above line;

--- a/src/main/webapp/css/imcms-login-page.css
+++ b/src/main/webapp/css/imcms-login-page.css
@@ -59,3 +59,7 @@
 .imcms-button--neutral {
     float: right;
 }
+
+.imcms-info-body__login-buttons {
+    margin: 10px;
+}
